kubernetes/yml/citadel.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: am-citadel
  namespace: istio-system  
  labels:
    istio: citadel
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind: Mapping
      name: am-citadel_mapping
      prefix: /
      timeout_ms: 10000
      service: am-citadel.istio-system:8060
      #only works via istio ingress gateway
      host: istio-citadel.istio-system.svc.cluster.local:30999
spec:
  type: NodePort
  ports:
  - port: 8060
    targetPort: 8060
    name: http
  selector:
    istio: citadel
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: itzone-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
#curl -H "Host: istio-citadel.istio-system.svc.cluster.local:30999" localhost:30999/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: citadel
  namespace: istio-system
spec:
# aby port przyjął w hostach trzeba usunąć galley deployment
  hosts:
  - "istio-citadel.istio-system.svc.cluster.local:30999"
  gateways:
  - itzone-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: istio-citadel
        #host: istio-citadel.istio-system.svc.cluster.local
        host: ambassador.default.svc.cluster.local # interpreted as springbootweb.apps.svc.cluster.local
        port:
          #number: 7070
          number: 80
---
